# mini-claude

./: .env  .gitignore  CLAUDE.md  Readme.md  mini_agent.py  pyproject.toml
.claudemini/sessions/: latest.json
src/mini_claude/: cli.py  config.py
src/mini_claude/core/: engine.py  session.py  storage.py
src/mini_claude/tools/: file_manager.py  terminal.py
src/mini_claudecode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
